[package]
name = "ddc_brightness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ddc-hi = { version = "0.5", features = ["log-kv"], git = "https://github.com/arcnmx/ddc-hi-rs", branch = "v0.5.x" }
