[package]
name = "ddc_brightness"
version = "0.1.0"
edition = "2021"
authors = ["Ushinnary"]
description = "A command line tool to control the brightness of DDC/CI compatible monitors."
keywords = ["ddc", "brightness", "monitor", "ddc-ci"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ddc-hi = { version = "0.5", git = "https://github.com/arcnmx/ddc-hi-rs", branch = "v0.5.x" }
